fixed layout issue with content that is too tall for the content container

--- a/src/App.css
+++ b/src/App.css
@@ -338,8 +338,9 @@ img {
   align-items: center;
   justify-content: flex-start;
   flex: 1;
+  height: 100%;
   max-height: 100vh;
-  overflow: auto;
+  overflow: hidden;
 }
 
 /* header navigation -- fixed height */
@@ -451,7 +452,7 @@ img {
 .body-container {
   flex: 1;
   width: 100%;
-  height: 100%;
+  height: calc(100% - var(--header-navi-height));
   padding: 1.75rem;
   flex-direction: column;
   display: flex;
