--- a/src/modules/Sales/styles/Index.css
+++ b/src/modules/Sales/styles/Index.css
@@ -2,6 +2,7 @@
 .dunning,
 .invoice,
 .master-list,
+.blanket-agreement,
 .order,
 .quotation,
 .reporting,
@@ -16,6 +17,7 @@
 .dunning .body-content-container,
 .invoice .body-content-container,
 .master-list .body-content-container,
+.blanket-agreement .body-content-container,
 .order .body-content-container,
 .quotation .body-content-container,
 .reporting .body-content-container,
